hphp/hack/test/typecheck/encapsed4.php.exp
File "encapsed4.php", line 7, characters 10-17:
Variable Variables are not legal (Parsing[1002])
